<resources>
    <string name="app_name">Poké TCG</string>
    <string name="app_name_debug">Poké TCG Debug</string>

    <string name="pokedex">POKEDEX</string>
    <string name="sair">SAIR</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_collection">Coleção</string>

    <string name="logo_description">pokemon tcg game</string>
    <string name="label_retry">Tentar novamente</string>
    <string name="msg_error_details">Dados inválidos</string>

    <string name="menu_home_home">Home</string>
    <string name="menu_home_profile">Perfil</string>

    <string name="home_select_options">Selecione o que deseja calcular</string>

    <string name="label_username">SEU NOME</string>
    <string name="label_email">E-MAIL</string>
    <string name="label_password">SENHA</string>

    <string name="label_accept_terms">Li e aceitos os termos</string>
    <string name="label_terms">Termos de uso</string>

    <string name="label_create_account">Criar minha conta</string>
    <string name="label_reset_password">Esqueci minha senha</string>

    <string name="logo_app_content_desc">Logo app</string>
    <string name="button_login">Conectar</string>
    <string name="button_create_account">Criar conta</string>
    <string name="button_i_have_account">Já tenho conta</string>

    <string name="login_subtitle">Faça o login para continuar</string>

    <string name="signup_subtitle">Preencha os dados da sua conta</string>
    <string name="label_exit">SAIR</string>
    <string name="label_about">Sobre</string>
    <string name="title_cards">Cards</string>
    <string name="msg_collection_updated">Coleção atualizada</string>
    <string name="label_remove">Remover</string>
    <string name="label_add">Adicionar</string>
    <string name="label_collection">Coleção</string>
    <string name="msg_add_cards">Adicione cards a coleção</string>
    <string name="label_share">Compartilhar</string>
    <string name="banner">banner</string>
    <string name="fiap_logo">fiap logo</string>
    <string name="label_recover">Recuperar</string>
    <string name="label_signin">Cadastrar</string>
    <string name="msg_logout">Deseja sair?</string>
    <string name="label_number">Numero</string>
    <string name="label_artist">Artista</string>
    <string name="label_rarity">Raridade</string>
    <string name="label_type">Tipo</string>

</resources>
