<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvSubTitleSignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:id="@+id/ivLogoApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">


            <com.quanticheart.core.components.TextContainer
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="text"
                app:placeholder="Digite seu nome"
                app:title="@string/label_username" />

            <com.quanticheart.core.components.TextContainer
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="email"
                app:placeholder="Digite seu email"
                app:title="@string/label_email" />

            <com.quanticheart.core.components.TextContainer
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="password"
                app:placeholder="Digite sua senha"
                app:title="@string/label_password" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/cbTermsSignUp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_rawRes="@raw/checkbox_animated" />

                <TextView
                    android:id="@+id/tvTerms"
                    style="@style/link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/label_accept_terms"
                    app:layout_constraintBottom_toBottomOf="@+id/cbTermsSignUp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cbTermsSignUp"
                    app:layout_constraintTop_toTopOf="@+id/cbTermsSignUp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btCreateAccount"
                style="@style/custom_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cadastrar"
                app:layout_constraintBottom_toTopOf="@+id/btClose"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/btLoginSignUp"
                style="@style/link"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/button_i_have_account" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>